--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,39 @@
-# 环境变量文件
-.env
-.env.local
-.env.*
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# 但是可以提交环境变量示例文件
-!.env.example 
+# Logs
+logs/
+*.log
+
+# Environment variables
+.env
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
