--- a/.github/workflows/update-papers.yml
+++ b/.github/workflows/update-papers.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
     - name: 检出代码
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0  # 获取完整历史记录
       
     - name: 设置Python
       uses: actions/setup-python@v4
@@ -37,7 +39,8 @@ jobs:
       run: |
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
-        git add data/ README.md logs/
+        git pull origin ${{ github.ref }} --rebase  # 先拉取并rebase远程更改
+        git add data/ README.md
         git commit -m "自动更新: $(date +'%Y-%m-%d')" || exit 0
         
     - name: 推送更改
