--- a/.github/workflows/update-papers.yml
+++ b/.github/workflows/update-papers.yml
@@ -37,7 +37,7 @@ jobs:
       run: |
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
-        git add data/ README.md logs/
+        git add data/ README.md
         git commit -m "自动更新: $(date +'%Y-%m-%d')" || exit 0
         
     - name: 推送更改
