添加统一CLI入口，支持交互式配置向导，关键词生成，BibTeX导出等新功能，更新README和示例环境配置。

--- a/.gitignore
+++ b/.gitignore
@@ -24,13 +24,18 @@ wheels/
 # Logs
 logs/
 *.log
+tests/
 
 # Environment variables
 .env
 
+# Output directory (BibTeX exports, etc.)
+output/
+
 # IDE
 .idea/
 .vscode/
+.cursor/
 *.swp
 *.swo
 
